[package]
name = "rp_led_strip"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread", "nightly"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = "0.2.0"
fixed = "1.28.0"
fixed-macro = "1.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
smart-leds = "0.4.0"
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "proto-ipv4", "medium-ethernet", "dns"] }
rand = { version = "0.8.5", default-features = false }
embedded-io-async = "0.6.1"
heapless = { version = "0.8", default-features = false }
picoserve = { version = "0.12.0", features = ["defmt", "embassy"] }
